# skiplist

./: CMakeLists.txt  Dockerfile  README.md  main.c
slist/: CMakeLists.txt
slist/include/slist/: mock.h  models.h  pstack.h  slist-util.h  slist.h  util.h
slist/src/: mock.c  pstack.c  slist-util.c  slist.c  util.c
